@@ -171,7 +171,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   adviser using a TAL expression (column 'Available on') and added a way to specify in that
   two or more custom advisers are linked together (column 'Is linked to previous row?')
 - Added caching for MeetingConfg.getFileTypes, MeetingConfig.getCategories,
-  ToolPloneMeeting.getGroupsForUser, IAnnexable.getAnnexesToPrint
+  ToolPloneMeeting.getGroupsForUser, ToolPloneMeeting.userIsAmong,
+  IAnnexable.getAnnexesToPrint
 - Link between a MeetingFile and a MeetingFileType is no more a Reference
 - Added possibility to define sub-meetingFileTypes so a single MeetingFileType can have
   several subtypes displayed in the UI under the same icon
